--- a/css/resume.css
+++ b/css/resume.css
@@ -117,10 +117,14 @@ p.lead {
     padding: 0.5rem;
   }
   #sideNav .navbar-brand .img-profile {
-    max-width: 10rem;
-    max-height: 5rem;
-    border: 0.5rem solid;
+    max-width: 16rem;
+    max-height: 18rem;
+    border:10px;
     background-color: #451e3e;
+    position: relative;
+    top:-150px;
+    left: 4px;
+    padding:10px;
   }
   #sideNav .navbar-collapse {
     display: -webkit-box;
